Do not show android view for non-gradle/apk/legacy projects
Bug: 430548306
Bug: 428697511
Test: tests updated
Change-Id: I9bda353bd4cd0dafc474dd920e8c2fde9d8eaf40

GitOrigin-RevId: 24d3b2cef0d21e58300d292abcab5d4f1021a5c7